Fix initial data. Add whitespace to monthlist. Set loading state to audio player to prevent rendering mismatch

--- a/src/core/components/footer/footer.module.scss
+++ b/src/core/components/footer/footer.module.scss
@@ -6,6 +6,7 @@
 	height: 5rem;
 	color: gray;
 	font-size: 11px;
+  margin-top: 7rem;
 
 	@media all and (max-width: 1313px) {
 		margin-top: 5rem;
