--- a/src/core/components/header/header.module.scss
+++ b/src/core/components/header/header.module.scss
@@ -6,13 +6,13 @@
 		),
 		url('/images/boat-sunset2.png');
 	background-repeat: no-repeat;
-	background-position: left center;
+	background-position: left bottom;
 	// background-attachment: fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;
-	height: 27rem;
+	height: 25rem;
 	width: 100%;
 
 	@media all and (max-width: 1313px) {
