--- a/src/core/components/month/month.module.scss
+++ b/src/core/components/month/month.module.scss
@@ -7,7 +7,7 @@
 	padding: 0.3rem 0.3rem;
 	margin: 1rem 0.5rem;
 	min-width: 10rem;
-	color: var(--color-green-dark);
+	color: var(--color-primary);
 	font-weight: 600;
 	cursor: pointer;
 	border-radius: 7px;
@@ -43,6 +43,8 @@
 
 .active-month {
 	// background-color: rgba(0,0,0,.5);
-	background-color: var(--color-green-dark);
+	background-color: var(--color-primary);
 	color: #fff;
+  border-top: 3px solid;
+  border-top-color: var(--color-orange);
 }
