--- a/src/core/components/nav/nav.module.scss
+++ b/src/core/components/nav/nav.module.scss
@@ -114,7 +114,7 @@
 }
 
 .active-item {
-	background-color: var(--color-green-dark) !important;
+	background-color: var(--color-primary) !important;
 	a {
 		color: #ffffff !important;
 	}
