--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,10 +1,11 @@
 :root {
     /* COLORS */
-    --color-primary: ##005C77;
+    // --color-primary: ##005C77;
+    --color-primary: #313D40;
     --color-yellow:#FCCD04;
     --color-green-dark: #005C77;
     --color-green-light: #C9E1C8;
-    --color-orange: #FF652F;
+    --color-orange: #FF4002;
     --color-flat-orange: #FFCCBC;
     --color-flat-green: #00887A;
     --color-flat-blue: #77A6F7;
@@ -13,7 +14,7 @@
     --color-grey-light-2: #f4f2f2;
     --color-grey-light-3: #f0eeee;
     --color-grey-light-4: #ccc;
-    
+
     --color-grey-dark-1: #333;
     --color-grey-dark-2: #777;
     --color-grey-dark-3: #999;
